Added support for "description" HTML meta tag.

--- a/tmpl_header.html
+++ b/tmpl_header.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>$page_title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="$description" />
     <link href="/inc/css/bootstrap.min.css" rel="stylesheet">
     <link href="/inc/css/zindilis.com.css" rel="stylesheet">
     <link rel="canonical" href="$canonical_url" />
