--- a/tmpl-header.html
+++ b/tmpl-header.html
@@ -5,9 +5,9 @@
     <title>$page_title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="$description" />
-    <link href="/inc/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
     <link href="/inc/css/zindilis.com.css" rel="stylesheet">
-    <link rel="canonical" href="$canonical_url" />
+    <link rel="canonical" href="$canonical" />
     <script type="text/javascript">var _gaq=_gaq||[];_gaq.push(["_setAccount","UA-32844278-1"]);_gaq.push(["_trackPageview"]);(function(){var e=document.createElement("script");e.type="text/javascript";e.async=true;e.src=("https:"==document.location.protocol?"https://ssl":"http://www")+".google-analytics.com/ga.js";var t=document.getElementsByTagName("script")[0];t.parentNode.insertBefore(e,t)})()</script>
 </head>
 
@@ -27,7 +27,6 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li><a href="/docs/">Docs</a></li>
-                    <li><a href="/books/">Books</a></li>
                     <li><a href="/about/">About</a></li>
                 </ul>
             </div>
