--- a/tmpl-footer.html
+++ b/tmpl-footer.html
@@ -6,7 +6,7 @@
             </div>
             <div class="panel-body">
                 <ul class="list-unstyled">
-                    $page_info
+                    $info
                 </ul>
             </div>
         </div>
@@ -37,6 +37,6 @@
         </div>
 </footer></article>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-<script src="/inc/js/bootstrap.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 
 </body></html>
