--- a/tmpl-footer.html
+++ b/tmpl-footer.html
@@ -27,10 +27,10 @@
                                 <h3 class="panel-title">License</h3>
                         </div>
                         <div class="panel-body">
-                                <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">
-                                <img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-sa/4.0/88x31.png">
+                                <a rel="license" href="https://creativecommons.org/licenses/by-sa/4.0/">
+                                <img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png">
                                 </a><br>This work is licensed under a
-                                <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">
+                                <a rel="license" href="https://creativecommons.org/licenses/by-sa/4.0/">
                                 Creative Commons Attribution-ShareAlike 4.0 International License</a>.
                         </div>
                 </div>
