--- a/tmpl-header.html
+++ b/tmpl-header.html
@@ -27,6 +27,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li><a href="/docs/">Docs</a></li>
+                    <li><a href="/projects/">Projects</a></li>
                     <li><a href="/about/">About</a></li>
                 </ul>
             </div>
