Added link to my GitHub repository.

--- a/tmpl-footer.html
+++ b/tmpl-footer.html
@@ -17,7 +17,7 @@
                                 <h3 class="panel-title">Website Info</h3>
                         </div>
                         <div class="panel-body">
-                                <p>Built with Python and styled with <a href="http://getbootstrap.com/">Bootstrap</a>.</p>
+                                <p><a href="https://github.com/marios-zindilis/zalza">Built with Python</a> and styled with <a href="http://getbootstrap.com/">Bootstrap</a>.</p>
                         </div>
                 </div>
         </div>
